# Euchre

./: Euchre.hs  README.md  euchre.cabal
