name:                euchre
version:             0.1.0.0
synopsis:            Euchre library in Haskell
description:         Library implementing logic and types for Euchre games
license:             AllRightsReserved
author:              Justin Leitgeb
maintainer:          justin@stackbuilders.com
copyright:           Justin Leitgeb

build-type:          Simple
cabal-version:       >=1.10

source-repository head
  Type:     git
  Location: git://github.com/jsl/euchre.git

library
  exposed-modules: Euchre
  build-depends:         base >=4.6 && <4.7
                       , random
                       , array
                       , vector
                       , pretty-show

  default-language:    Haskell2010